Just finished a little project

--- a/project.html
+++ b/project.html
@@ -284,5 +284,50 @@
             </div>
         </div>
     </div>
+    <section class="blog-area">
+        <div class="container-blog">
+            <div class="blog-header">
+                <div class="blog-h1"><h1>Latest Post from our Blog</h1></div>
+                <div class="blog-p"><p>Who are in extremely love with eco friendly system.</p></div> 
+            </div>
+            <div class="blog-cont">
+                <div class="1st-blog">
+                    <div class="b1"><img src="./asset/image/b1.jpg" alt="b1"></div>
+                    <div class="h3"><h3>Portable Fashion for Women</h3></div>
+                    <div class="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>
+                         sed do eiusmod tempor incididunt ut labore et dolore <br> magna aliqua.</div>
+                    <div class="last-img"><img src="asset/image/b4.jpg" alt="b4"></div>
+                    <div class="last-txt">
+                        <div class="last-h3"><h3>Belle Beck</h3></div>
+                        <p>January 18th, 2018 at 17.21</p>
+                    </div>
+                </div>
+
+                <div class="2nd-blog">
+                    <div class="b2"><img src="./asset/image/b2.jpg" alt="b2"></div>
+                    <div class="h3"><h3>Portable Fashion for Women</h3></div>
+                    <div class="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>
+                         sed do eiusmod tempor incididunt ut labore et dolore <br> magna aliqua.</div>
+                    <div class="last-img"><img src="asset/image/b5.jpg" alt="b5"></div>
+                    <div class="last-txt">
+                        <div class="last-h3"><h3>Harriet Barrett</h3></div>
+                        <p>January 18th, 2018 at 17.21</p>
+                    </div>
+                </div>
+
+                <div class="3rd-blog">
+                    <div class="b3"><img src="./asset/image/b3.jpg" alt="b3"></div>
+                    <div class="h3"><h3>Portable Fashion for Women</h3></div>
+                    <div class="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br>
+                         sed do eiusmod tempor incididunt ut labore et dolore <br> magna aliqua.</div>
+                    <div class="last-img"><img src="asset/image/b6.jpg" alt="b6"></div>
+                    <div class="last-txt">
+                        <div class="last-h3"><h3>Fannie Simmons</h3></div>
+                        <p>January 18th, 2018 at 17.21</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
